      been i486.
    - Move i686 libraries to /lib/i686/cmov.
    - Include make check output in the libc package.
    - S/390 perversely uses /lib/ld64.so.1 as the dynamic linker; include
      a symlink.
    - Leave /lib64/ld64.so.1 executable on S/390.
    - Generate SUPPORTED again.
    - Update ldconfig to prefer /lib/tls to /lib/i686/cmov.

  * Phil Blundell <pb@nexus.co.uk>

    - debian/patches/arm-ioperm.dpatch: Try again.

  * Jeff Bailey <jbailey@nisa.net>

    Welcome back HPPA, Thanks to Carlos O'Donell <carlos@baldric.uwo.ca>

    - debian/patches/50_glibc232-hppa-full-nptl-2003-10-22.dpatch: New.
    - debian/patches/50_glibc23-hppa-entry.dpatch: Remove.
    - debian/patches/glibc23-00-hppa-pthreads.dpatch: Remove.
    - debian/patches/glibc23-01-hppa-dl-machine.dpatch: Remove.
    - debian/patches/glibc23-07-hppa-atomicity.dpatch: Remove.
    - debian/patches/glibc23-hppa-compat.dpatch: Remove.
    - debian/patches/glibc23-hppa-malloc8.dpatch: Remove.

    - debian/patches/00list: Update.

    - debian/rules: Define NJOBS as 1.
    - debian/sysdeps/linux.mk: Define NJOBS based on number of processors
    - debian/rules.d/build.mk: Use -j $(NJOBS) during build.
    Based on patch from Ian Wienand <ianw@gelato.unsw.edu.au>

 -- Daniel Jacobowitz <dan@debian.org>  Fri, 24 Oct 2003 20:18:33 -0400

glibc (2.3.2.ds1-6) experimental; urgency=low

  * Phil Blundell <pb@debian.org>

    - debian/patches/arm-ioperm.dpatch: New.

  * Daniel Jacobowitz <dan@debian.org>

    - Add debhelper build dependency.
    - Use linux-kernel-headers package for headers.
    - Add S/390 support.
    - Build libc6-dev-sparc64.

 -- Daniel Jacobowitz <dan@debian.org>  Mon, 20 Oct 2003 16:27:39 -0400

glibc (2.3.2.ds1-5) experimental; urgency=low

  * Daniel Jacobowitz <dan@debian.org>

    - Fix a thinko in i686 timing patch for non-HP_TIMING architectures.
    - Add -k to make check.

 -- Daniel Jacobowitz <dan@debian.org>  Mon, 13 Oct 2003 10:53:31 -0400
