@@ -5,11 +5,9 @@ depflags = libc=$(libc) glibc=glibc \
 
 libc_control_flags = $(shell $(depflags) libc)
 libc_dev_control_flags = $(shell $(depflags) libc_dev)
-libc_opt_control_flags = $(shell $(depflags) libc_opt)
 
 $(libc)_control_flags = $(libc_control_flags)
 $(libc)-dev_control_flags = $(libc_dev_control_flags)
-$(libc)-opt_control_flags = $(libc_opt_control_flags)
 
 test_depflags:
 	@echo
@@ -18,7 +16,4 @@ test_depflags:
 	@echo
 	@echo "$(libc)-dev:"
 	@echo '  $(libc_dev_control_flags)'
-	@echo
-	@echo "$(libc)-opt"
-	@echo '  $(libc_opt_control_flags)'
 	@echo
